--- a/COFFEE-BLOG/css/style.css
+++ b/COFFEE-BLOG/css/style.css
@@ -71,7 +71,7 @@ h4 {
 p {
     /* font-size:1.8rem; */
     line-height: 3rem;
-    padding-bottom: 1.5rem;
+    /* padding-bottom: 1.5rem; */
 }
 
 img {
@@ -158,11 +158,16 @@ img {
     display:block;
     text-align: center;
     font-size: 1.8rem;
-    color:var(--blanco);
-    padding-left: 5rem;
+    color:var(--blanco);    
 }
 
+.nav__link--courses {
+    padding-left: 2rem;
+}
 
+.nav__link--contact {
+    padding-left: 2rem;
+}
 
 @media (min-width: 768px){
     .main-content {
@@ -205,8 +210,6 @@ img {
 
 .button:hover{
     color:var(--blanco);
-    /* background-color: var(--azul); */
-    /* box-shadow: 0px 0px 5px 0px rgba(175, 177, 177, 0.4); */
     background: rgb(2,0,36);
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(45,49,66,1) 100%);
     color: #fff;
@@ -332,20 +335,28 @@ img {
 }
 .form {
     background-color: var(--blanco);
-    margin: -5rem auto 0 auto;
+    margin: 0 auto;
     width:95%;
-    padding:5rem;
+    display:inline-block;
+    justify-content: center;
+}
+
+.field__Button{
+    display:flex;
+    justify-content:flex-end;
+    /* padding:0px; */
 }
 
 .field{
     display:flex;
     margin-bottom: 2rem;
     /* gap:2rem; */
+    flex-wrap: wrap;
 }
 
 .field__label{
     flex:  0 0 9rem;
-    text-align: right;
+    text-align: left;
     padding-right:1rem;
 }
 
