--- a/COFFEE-BLOG/css/style.css
+++ b/COFFEE-BLOG/css/style.css
@@ -161,12 +161,7 @@ img {
     color:var(--blanco);    
 }
 
-.nav__link--courses {
-    padding-left: 2rem;
-}
 
-.nav__link--contact {
-    padding-left: 2rem;
 }
 
 @media (min-width: 768px){
@@ -356,7 +351,7 @@ img {
 
 .field__label{
     flex:  0 0 9rem;
-    text-align: left;
+    text-align: right;
     padding-right:1rem;
 }
 
