--- a/COFFEE-BLOG/css/style.css
+++ b/COFFEE-BLOG/css/style.css
@@ -122,13 +122,10 @@ img {
 @media (min-width: 768px){
     .bar {
         display:flex;
-        justify-content: space-around                                                                                                                          ; /*logo queda a la izq y nav a la der (alinea horizontalmente)*/
+        justify-content: space-around;                                                                                                                          ; /*logo queda a la izq y nav a la der (alinea horizontalmente)*/
         align-items: center; /*para alinear verticalmente*/
     }
 
-@media (min-width: 768px) {
-    
-}
     .header__text {
         margin-top:15rem;
     }
@@ -258,11 +255,10 @@ img {
 .header__aboutUs{
     background-image: url(../img/background.png);
     background-position-y: center ;
-    height:25rem;
+    height:60rem;
 }
 
 .header__textAboutUs {
-    
         text-align: center;
         color: var(--blanco);
         margin-top: 5rem;
@@ -284,6 +280,7 @@ img {
     background-repeat: no-repeat;
     background-size: cover;
     background-position-y: center;  
+    height: 60rem;
 }
 
 .course {
